--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
             transition: transform 0.3s ease-in-out;
         }
 
-        .skill-category:hover .skill-icon-container svg {
-            transform: scale(1.1);
-        }
-
         /* Animation for sections and their children */
         .fade-in-section {
             opacity: 0;
@@ -119,19 +115,19 @@
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Core Competencies</h2>
                 <p class="text-lg text-gray-400 mt-2 max-w-2xl mx-auto">I specialize in a modern tech stack designed for building scalable, resilient, and automated cloud infrastructure.</p>
             </div>
-            <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-16">
+            <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-8">
 
                 <!-- Category: Cloud & Containerization -->
-                <div class="flex items-start space-x-6 skill-category animate-child">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
-                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
+                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
                         </svg>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-white">Cloud & Containerization</h3>
-                        <p class="text-gray-400 mt-1">Building robust infrastructure on major cloud platforms and container ecosystems.</p>
-                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside">
+                        <h3 class="text-xl font-bold text-white transition-colors duration-300 group-hover:text-gray-900">Cloud & Containerization</h3>
+                        <p class="text-gray-400 mt-1 transition-colors duration-300 group-hover:text-gray-600">Building robust infrastructure on major cloud platforms and container ecosystems.</p>
+                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside transition-colors duration-300 group-hover:text-gray-600">
                             <li>Amazon Web Services</li>
                             <li>Google Cloud</li>
                             <li>Kubernetes</li>
@@ -141,16 +137,16 @@
                 </div>
 
                 <!-- Category: CI/CD & Automation -->
-                 <div class="flex items-start space-x-6 skill-category animate-child">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
-                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                 <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
+                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
                         </svg>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-white">CI/CD & Automation</h3>
-                        <p class="text-gray-400 mt-1">Streamlining development pipelines for rapid and reliable software delivery.</p>
-                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside">
+                        <h3 class="text-xl font-bold text-white transition-colors duration-300 group-hover:text-gray-900">CI/CD & Automation</h3>
+                        <p class="text-gray-400 mt-1 transition-colors duration-300 group-hover:text-gray-600">Streamlining development pipelines for rapid and reliable software delivery.</p>
+                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside transition-colors duration-300 group-hover:text-gray-600">
                             <li>Jenkins</li>
                             <li>Infrastructure as Code (IaC)</li>
                             <li>Agile Methodologies</li>
@@ -159,16 +155,16 @@
                 </div>
 
                 <!-- Category: Monitoring & Observability -->
-                <div class="flex items-start space-x-6 skill-category animate-child">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
-                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
+                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                         </svg>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-white">Monitoring & Observability</h3>
-                        <p class="text-gray-400 mt-1">Ensuring system health and performance with industry-standard tooling.</p>
-                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside">
+                        <h3 class="text-xl font-bold text-white transition-colors duration-300 group-hover:text-gray-900">Monitoring & Observability</h3>
+                        <p class="text-gray-400 mt-1 transition-colors duration-300 group-hover:text-gray-600">Ensuring system health and performance with industry-standard tooling.</p>
+                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside transition-colors duration-300 group-hover:text-gray-600">
                             <li>Prometheus</li>
                             <li>Grafana</li>
                         </ul>
@@ -176,16 +172,16 @@
                 </div>
 
                 <!-- Category: Programming & Scripting -->
-                <div class="flex items-start space-x-6 skill-category animate-child">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container">
-                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
+                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                         </svg>
                     </div>
                     <div>
-                        <h3 class="text-xl font-bold text-white">Programming & Scripting</h3>
-                        <p class="text-gray-400 mt-1">Automating tasks and building tools with versatile programming languages.</p>
-                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside">
+                        <h3 class="text-xl font-bold text-white transition-colors duration-300 group-hover:text-gray-900">Programming & Scripting</h3>
+                        <p class="text-gray-400 mt-1 transition-colors duration-300 group-hover:text-gray-600">Automating tasks and building tools with versatile programming languages.</p>
+                        <ul class="mt-4 space-y-2 text-gray-300 list-disc list-inside transition-colors duration-300 group-hover:text-gray-600">
                             <li>Python Programming</li>
                             <li>Go Lang</li>
                             <li>Bash Scripting</li>
@@ -409,4 +405,7 @@
 
 </body>
 </html>
+
+
+
 
