--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
                 <!-- Category: Cloud & Containerization -->
                 <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
-                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300">
+                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
                         </svg>
                     </div>
@@ -138,8 +138,8 @@
 
                 <!-- Category: CI/CD & Automation -->
                  <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
-                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300">
+                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
                         </svg>
                     </div>
@@ -156,8 +156,8 @@
 
                 <!-- Category: Monitoring & Observability -->
                 <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
-                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300">
+                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" />
                         </svg>
                     </div>
@@ -173,8 +173,8 @@
 
                 <!-- Category: Programming & Scripting -->
                 <div class="group bg-gray-800/50 p-8 rounded-xl flex items-start space-x-6 skill-category animate-child transition-all duration-300 hover:bg-gray-100 hover:-translate-y-1">
-                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300 group-hover:bg-white">
-                        <svg class="w-8 h-8 text-blue-400 transition-colors duration-300 group-hover:text-indigo-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                    <div class="flex-shrink-0 bg-gray-800 p-4 rounded-lg skill-icon-container transition-colors duration-300">
+                        <svg class="w-8 h-8 text-blue-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4" />
                         </svg>
                     </div>
@@ -405,7 +405,5 @@
 
 </body>
 </html>
-
-
 
 
