--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #111827; /* A dark blue-gray */
+            background-color: #111827; /* Default dark blue-gray */
             color: #E5E7EB; /* A light gray for text */
+            transition: background-color 0.8s ease-in-out; /* Smooth background transition */
         }
 
         /* Subtle glow effect for interactive elements */
@@ -93,7 +94,7 @@
     <main class="container mx-auto px-6">
 
         <!-- Hero/About Section -->
-        <section id="about" class="min-h-screen flex items-center pt-24 pb-12 fade-in-section">
+        <section id="about" class="min-h-screen flex items-center pt-24 pb-12 fade-in-section" data-bg-color="#111827">
             <div class="max-w-4xl">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight tracking-tighter text-white animate-child">
                     Experienced DevOps Engineer & Cloud Infrastructure Specialist
@@ -110,7 +111,7 @@
         </section>
 
         <!-- Skills Section -->
-        <section id="skills" class="py-20 fade-in-section">
+        <section id="skills" class="py-20 fade-in-section" data-bg-color="#1F2937">
             <div class="text-center mb-16 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Core Competencies</h2>
                 <p class="text-lg text-gray-400 mt-2 max-w-2xl mx-auto">I specialize in a modern tech stack designed for building scalable, resilient, and automated cloud infrastructure.</p>
@@ -192,15 +193,15 @@
         </section>
 
         <!-- Work Experience Section -->
-        <section id="experience" class="py-20 fade-in-section">
+        <section id="experience" class="py-20 fade-in-section" data-bg-color="#374151">
             <div class="text-center mb-16 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Work Experience</h2>
                 <p class="text-lg text-gray-400 mt-2 max-w-2xl mx-auto">My professional journey and key roles.</p>
             </div>
-            <div class="max-w-3xl mx-auto relative border-l-2 border-gray-700 pl-10">
+            <div class="max-w-3xl mx-auto relative border-l-2 border-gray-600 pl-10">
                 <!-- Experience 1 -->
                 <div class="mb-12 relative animate-child">
-                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-700"></div>
                     <time class="text-sm font-semibold uppercase text-blue-400">July 2023 - Present</time>
                     <h3 class="text-2xl font-bold text-white mt-1">DevOps Engineer Lead</h3>
                     <p class="text-lg text-gray-400">ASYX</p>
@@ -216,7 +217,7 @@
                 </div>
                 <!-- Experience 2 -->
                 <div class="mb-12 relative animate-child">
-                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-700"></div>
                     <time class="text-sm font-semibold uppercase text-blue-400">August 2019 - July 2023</time>
                     <h3 class="text-2xl font-bold text-white mt-1">DevOps Engineer</h3>
                     <p class="text-lg text-gray-400">ASYX</p>
@@ -231,7 +232,7 @@
                 </div>
                 <!-- Experience 3 -->
                 <div class="relative animate-child">
-                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-800"></div>
+                    <div class="absolute -left-[46px] top-1.5 w-4 h-4 bg-blue-500 rounded-full border-4 border-gray-700"></div>
                     <time class="text-sm font-semibold uppercase text-blue-400">November 2017 - July 2019</time>
                     <h3 class="text-2xl font-bold text-white mt-1">Network Engineer</h3>
                     <p class="text-lg text-gray-400">PT Time Excelindo</p>
@@ -244,7 +245,7 @@
         </section>
 
         <!-- Featured Work Section -->
-        <section id="live-projects" class="py-20 fade-in-section">
+        <section id="live-projects" class="py-20 fade-in-section" data-bg-color="#1E1B4B">
             <div class="text-center mb-12 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">Featured Work</h2>
                 <p class="text-lg text-gray-400 mt-2">A selection of live SaaS platforms I have contributed to.</p>
@@ -296,7 +297,7 @@
         </section>
 
         <!-- GitHub Projects Section -->
-        <section id="github" class="py-20 fade-in-section">
+        <section id="github" class="py-20 fade-in-section" data-bg-color="#0E1428">
             <div class="text-center mb-12 animate-child">
                 <h2 class="text-3xl md:text-4xl font-bold text-white">GitHub</h2>
                 <p class="text-lg text-gray-400 mt-2">Explore my open-source contributions and personal projects.</p>
@@ -312,7 +313,7 @@
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="py-20 fade-in-section">
+        <section id="contact" class="py-20 fade-in-section" data-bg-color="#111827">
             <div class="max-w-6xl mx-auto">
                 <div class="text-center mb-12 animate-child">
                     <h2 class="text-3xl md:text-4xl font-bold text-white">Get In Touch</h2>
@@ -384,26 +385,41 @@
     <!-- JavaScript for Scroll Animations -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            const observer = new IntersectionObserver((entries) => {
+            // Observer for fade-in animations
+            const animationObserver = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
-                    // Check if the element is intersecting (visible)
                     if (entry.isIntersecting) {
                         entry.target.classList.add('is-visible');
                     }
                 });
             }, {
-                threshold: 0.1 // Trigger when 10% of the element is visible
+                threshold: 0.1
             });
 
-            // Observe all sections with the .fade-in-section class
-            const sections = document.querySelectorAll('.fade-in-section');
-            sections.forEach(section => {
-                observer.observe(section);
+            const sectionsToAnimate = document.querySelectorAll('.fade-in-section');
+            sectionsToAnimate.forEach(section => {
+                animationObserver.observe(section);
+            });
+
+            // Observer for background color changes
+            const colorObserver = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        const newColor = entry.target.getAttribute('data-bg-color');
+                        document.body.style.backgroundColor = newColor;
+                    }
+                });
+            }, {
+                threshold: 0.5 // Change color when section is 50% visible
+            });
+
+            const sectionsToColor = document.querySelectorAll('section[data-bg-color]');
+            sectionsToColor.forEach(section => {
+                colorObserver.observe(section);
             });
         });
     </script>
 
 </body>
 </html>
-
 
